bindings/python/whisper_cpp_wrapper.py


# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 350
if _libs["whisper"].has("whisper_model_n_text_layer", "cdecl"):
    whisper_model_n_text_layer = _libs["whisper"].get("whisper_model_n_text_layer", "cdecl")
    whisper_model_n_text_layer.argtypes = [POINTER(struct_whisper_context)]
    whisper_model_n_text_layer.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 351
if _libs["whisper"].has("whisper_model_n_mels", "cdecl"):
    whisper_model_n_mels = _libs["whisper"].get("whisper_model_n_mels", "cdecl")
    whisper_model_n_mels.argtypes = [POINTER(struct_whisper_context)]
    whisper_model_n_mels.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 352
if _libs["whisper"].has("whisper_model_ftype", "cdecl"):
    whisper_model_ftype = _libs["whisper"].get("whisper_model_ftype", "cdecl")
    whisper_model_ftype.argtypes = [POINTER(struct_whisper_context)]
    whisper_model_ftype.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 353
if _libs["whisper"].has("whisper_model_type", "cdecl"):
    whisper_model_type = _libs["whisper"].get("whisper_model_type", "cdecl")
    whisper_model_type.argtypes = [POINTER(struct_whisper_context)]
    whisper_model_type.restype = c_int

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 359
if _libs["whisper"].has("whisper_get_logits", "cdecl"):
    whisper_get_logits = _libs["whisper"].get("whisper_get_logits", "cdecl")
    whisper_get_logits.argtypes = [POINTER(struct_whisper_context)]
    whisper_get_logits.restype = POINTER(c_float)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 360
if _libs["whisper"].has("whisper_get_logits_from_state", "cdecl"):
    whisper_get_logits_from_state = _libs["whisper"].get("whisper_get_logits_from_state", "cdecl")
    whisper_get_logits_from_state.argtypes = [POINTER(struct_whisper_state)]
    whisper_get_logits_from_state.restype = POINTER(c_float)

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 363
if _libs["whisper"].has("whisper_token_to_str", "cdecl"):
    whisper_token_to_str = _libs["whisper"].get("whisper_token_to_str", "cdecl")
    whisper_token_to_str.argtypes = [POINTER(struct_whisper_context), whisper_token]
    whisper_token_to_str.restype = c_char_p

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 364
if _libs["whisper"].has("whisper_model_type_readable", "cdecl"):
    whisper_model_type_readable = _libs["whisper"].get("whisper_model_type_readable", "cdecl")
    whisper_model_type_readable.argtypes = [POINTER(struct_whisper_context)]
    whisper_model_type_readable.restype = c_char_p

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 368
if _libs["whisper"].has("whisper_token_eot", "cdecl"):
    whisper_token_eot = _libs["whisper"].get("whisper_token_eot", "cdecl")
    whisper_token_eot.argtypes = [POINTER(struct_whisper_context)]
    whisper_token_eot.restype = whisper_token

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 369
if _libs["whisper"].has("whisper_token_sot", "cdecl"):
    whisper_token_sot = _libs["whisper"].get("whisper_token_sot", "cdecl")
    whisper_token_sot.argtypes = [POINTER(struct_whisper_context)]
    whisper_token_sot.restype = whisper_token

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 370
if _libs["whisper"].has("whisper_token_solm", "cdecl"):
    whisper_token_solm = _libs["whisper"].get("whisper_token_solm", "cdecl")
    whisper_token_solm.argtypes = [POINTER(struct_whisper_context)]
    whisper_token_solm.restype = whisper_token

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 371
if _libs["whisper"].has("whisper_token_prev", "cdecl"):
    whisper_token_prev = _libs["whisper"].get("whisper_token_prev", "cdecl")
    whisper_token_prev.argtypes = [POINTER(struct_whisper_context)]
    whisper_token_prev.restype = whisper_token

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 372
if _libs["whisper"].has("whisper_token_nosp", "cdecl"):
    whisper_token_nosp = _libs["whisper"].get("whisper_token_nosp", "cdecl")
    whisper_token_nosp.argtypes = [POINTER(struct_whisper_context)]
    whisper_token_nosp.restype = whisper_token

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 373
if _libs["whisper"].has("whisper_token_not", "cdecl"):
    whisper_token_not = _libs["whisper"].get("whisper_token_not", "cdecl")
    whisper_token_not.argtypes = [POINTER(struct_whisper_context)]
    whisper_token_not.restype = whisper_token

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 374
if _libs["whisper"].has("whisper_token_beg", "cdecl"):
    whisper_token_beg = _libs["whisper"].get("whisper_token_beg", "cdecl")
    whisper_token_beg.argtypes = [POINTER(struct_whisper_context)]
    whisper_token_beg.restype = whisper_token

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 375
if _libs["whisper"].has("whisper_token_lang", "cdecl"):
    whisper_token_lang = _libs["whisper"].get("whisper_token_lang", "cdecl")
    whisper_token_lang.argtypes = [POINTER(struct_whisper_context), c_int]
    whisper_token_lang.restype = whisper_token

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 378
if _libs["whisper"].has("whisper_token_translate", "cdecl"):
    whisper_token_translate = _libs["whisper"].get("whisper_token_translate", "cdecl")
    whisper_token_translate.argtypes = [POINTER(struct_whisper_context)]
    whisper_token_translate.restype = whisper_token

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 379
if _libs["whisper"].has("whisper_token_transcribe", "cdecl"):
    whisper_token_transcribe = _libs["whisper"].get("whisper_token_transcribe", "cdecl")
    whisper_token_transcribe.argtypes = [POINTER(struct_whisper_context)]
    whisper_token_transcribe.restype = whisper_token

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 382
if _libs["whisper"].has("whisper_print_timings", "cdecl"):
    whisper_print_timings = _libs["whisper"].get("whisper_print_timings", "cdecl")
    whisper_print_timings.argtypes = [POINTER(struct_whisper_context)]
    whisper_print_timings.restype = None

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 383
if _libs["whisper"].has("whisper_reset_timings", "cdecl"):
    whisper_reset_timings = _libs["whisper"].get("whisper_reset_timings", "cdecl")
    whisper_reset_timings.argtypes = [POINTER(struct_whisper_context)]
    whisper_reset_timings.restype = None

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 386
if _libs["whisper"].has("whisper_print_system_info", "cdecl"):
    whisper_print_system_info = _libs["whisper"].get("whisper_print_system_info", "cdecl")
    whisper_print_system_info.argtypes = []
    whisper_print_system_info.restype = c_char_p

enum_whisper_sampling_strategy = c_int# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 391

WHISPER_SAMPLING_GREEDY = 0# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 391

WHISPER_SAMPLING_BEAM_SEARCH = (WHISPER_SAMPLING_GREEDY + 1)# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 391

whisper_new_segment_callback = CFUNCTYPE(UNCHECKED(None), POINTER(struct_whisper_context), POINTER(struct_whisper_state), c_int, POINTER(None))# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 399

whisper_progress_callback = CFUNCTYPE(UNCHECKED(None), POINTER(struct_whisper_context), POINTER(struct_whisper_state), c_int, POINTER(None))# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 402

whisper_encoder_begin_callback = CFUNCTYPE(UNCHECKED(c_bool), POINTER(struct_whisper_context), POINTER(struct_whisper_state), POINTER(None))# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 407

whisper_abort_callback = CFUNCTYPE(UNCHECKED(c_bool), POINTER(None))# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 412

whisper_logits_filter_callback = CFUNCTYPE(UNCHECKED(None), POINTER(struct_whisper_context), POINTER(struct_whisper_state), POINTER(whisper_token_data), c_int, POINTER(c_float), POINTER(None))# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 417

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 487
class struct_anon_8(Structure):
    pass

struct_anon_8.__slots__ = [
    'best_of',
]
struct_anon_8._fields_ = [
    ('best_of', c_int),
]

# /home/dnhkng/Documents/Projects/whisper.cpp/whisper.h: 491
class struct_anon_9(Structure):
    pass

struct_anon_9.__slots__ = [
    'beam_size',
    'patience',
]
struct_anon_9._fields_ = [
    ('beam_size', c_int),
    ('patience', c_float),
]

struct_whisper_full_params.__slots__ = [
    'strategy',
    'n_threads',
    'n_max_text_ctx',
    'offset_ms',
    'duration_ms',
    'translate',
    'no_context',
    'no_timestamps',
    'single_segment',
    'print_special',
    'print_progress',
    'print_realtime',
    'print_timestamps',
    'token_timestamps',
    'thold_pt',
    'thold_ptsum',
    'max_len',
    'split_on_word',
    'max_tokens',
    'speed_up',
    'debug_mode',
    'audio_ctx',
    'tdrz_enable',
    'initial_prompt',
    'prompt_tokens',
    'prompt_n_tokens',
    'language',
    'detect_language',
    'suppress_blank',
    'suppress_non_speech_tokens',
    'temperature',
    'max_initial_ts',
    'length_penalty',
    'temperature_inc',
    'entropy_thold',
    'logprob_thold',
    'no_speech_thold',
    'greedy',
    'beam_search',
    'new_segment_callback',
    'new_segment_callback_user_data',
    'progress_callback',
    'progress_callback_user_data',
    'encoder_begin_callback',
    'encoder_begin_callback_user_data',
    'abort_callback',
    'abort_callback_user_data',
    'logits_filter_callback',
    'logits_filter_callback_user_data',
    'grammar_rules',
    'n_grammar_rules',
    'i_start_rule',
    'grammar_penalty',
]
struct_whisper_full_params._fields_ = [
    ('strategy', enum_whisper_sampling_strategy),
    ('n_threads', c_int),
    ('n_max_text_ctx', c_int),
    ('offset_ms', c_int),
    ('duration_ms', c_int),
    ('translate', c_bool),
    ('no_context', c_bool),
    ('no_timestamps', c_bool),
    ('single_segment', c_bool),
    ('print_special', c_bool),
    ('print_progress', c_bool),
    ('print_realtime', c_bool),
    ('print_timestamps', c_bool),
    ('token_timestamps', c_bool),
    ('thold_pt', c_float),
    ('thold_ptsum', c_float),
    ('max_len', c_int),
    ('split_on_word', c_bool),
    ('max_tokens', c_int),
    ('speed_up', c_bool),
    ('debug_mode', c_bool),
    ('audio_ctx', c_int),
    ('tdrz_enable', c_bool),
    ('initial_prompt', String),
    ('prompt_tokens', POINTER(whisper_token)),
    ('prompt_n_tokens', c_int),
    ('language', String),
    ('detect_language', c_bool),
    ('suppress_blank', c_bool),
    ('suppress_non_speech_tokens', c_bool),
    ('temperature', c_float),
    ('max_initial_ts', c_float),
    ('length_penalty', c_float),
    ('temperature_inc', c_float),
    ('entropy_thold', c_float),
    ('logprob_thold', c_float),
    ('no_speech_thold', c_float),
    ('greedy', struct_anon_8),
    ('beam_search', struct_anon_9),
    ('new_segment_callback', whisper_new_segment_callback),
    ('new_segment_callback_user_data', POINTER(None)),
    ('progress_callback', whisper_progress_callback),
    ('progress_callback_user_data', POINTER(None)),
    ('encoder_begin_callback', whisper_encoder_begin_callback),
    ('encoder_begin_callback_user_data', POINTER(None)),
    ('abort_callback', whisper_abort_callback),
    ('abort_callback_user_data', POINTER(None)),
    ('logits_filter_callback', whisper_logits_filter_callback),
    ('logits_filter_callback_user_data', POINTER(None)),
    ('grammar_rules', POINTER(POINTER(whisper_grammar_element))),
    ('n_grammar_rules', c_size_t),
    ('i_start_rule', c_size_t),
    ('grammar_penalty', c_float),
]
